--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="fisioterapia, idosos, geriatria, atendimento domiciliar, reabilitação, São Paulo" />
     <link rel="canonical" href="https://fisioterapia-idosos.com.br" />
 
-    <meta property="og:title" content="Fisioterapia para Idosos | Atendimento Domiciliar" />
+    <meta property="og:title" content="Fisioterapia para Idosos" />
     <meta property="og:description" content="Cuidado especializado para idosos com atendimento domiciliar em São Paulo." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
